--- a/Readme.html
+++ b/Readme.html
@@ -4,113 +4,123 @@
         <title>Startup DITA Project</title>
     </head>
     <body><h1>Startup DITA Project</h1><p>This is a startup DITA Project that imposes custom
-        settings for DITA editing. When the project is open in the Oxygen Project view, it will
-        impose a custom set of options as well as an imposed custom DITA framework
-        extension.</p><h2>Project Structure</h2><p>The project contains the following folder
-        structure:</p><ul>
-        <li><i>custom-settings/frameworks</i> - Contains custom <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script.html"
-            >DITA and DITA Map framework extensions</a>.</li>
-        <li><i>custom-settings/learned-words</i> - Contains learned words for the English dictionary
-            dictionary.</li>
-        <li><i>filters</i> - This initially empty folder can be updated to contain <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/dita-ditaval-file.html">DITAVAL
-            Filter files</a> used to profile the DITA content when publishing.</li>
-        <li><i>images</i> - Contains images used in the DITA project.</li>
-        <li><i>oxygen-term-checker</i> - Contains a <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/terminology-checker-addon.html"
-            >terminology file</a> with an example rule.</li>
-        <li><i>publishing</i> - Contains a <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/dita_open_toolkit_project.html"
-            >DITA-OT project file</a> and a <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/whr-publishing-template-2.html"
-            >publishing template</a>.</li>
-        <li><i>reusables</i> - Contains various reusable components. For example, in the
-            "reusable_components.dita" topic, you can add various DITA elements such as notes,
-            paragraphs, lists, and list items that are reused in various places in the project. See
-            <a href="https://www.oxygenxml.com/doc/ug-editor/topics/eppo-create-conref.html">more
-            about reusing DITA content</a>.</li>
-        <li><i>topics</i> - Contains all the DITA topics in the project.</li>
+            settings for DITA editing. When the project is open in the Oxygen Project view, it will
+            impose a custom set of options as well as custom DITA framework
+            extensions.</p><h2>Project Structure</h2><p>The project contains the following folder
+            structure:</p><ul>
+            <li><i>custom-settings/frameworks</i> - Contains custom <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script.html"
+                    >DITA and DITA Map framework extensions</a>.</li>
+            <li><i>custom-settings/learned-words</i> - Contains learned words for the English
+                dictionary dictionary.</li>
+            <li><i>filters</i> - This initially empty folder can be updated to contain <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/dita-ditaval-file.html"
+                    >DITAVAL Filter files</a> used to profile the DITA content when publishing.</li>
+            <li><i>images</i> - Contains images used in the DITA project.</li>
+            <li><i>oxygen-term-checker</i> - Contains a <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/terminology-checker-addon.html"
+                    >terminology file</a> with an example rule.</li>
+            <li><i>publishing</i> - Contains a <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/dita_open_toolkit_project.html"
+                    >DITA-OT project file</a> and a <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/whr-publishing-template-2.html"
+                    >publishing template</a>.</li>
+            <li><i>reusables</i> - Contains various reusable components. For example, in the
+                "reusable_components.dita" topic, you can add various DITA elements such as notes,
+                paragraphs, lists, and list items that are reused in various places in the project.
+                See <a href="https://www.oxygenxml.com/doc/ug-editor/topics/eppo-create-conref.html"
+                    >more about reusing DITA content</a>.</li>
+            <li><i>topics</i> - Contains all the DITA topics in the project.</li>
         </ul><h2>Settings Saved At Project Level</h2><p>Most of the preference pages in the
-        <b>Preferences</b> folder can be saved at <a
-        href="https://www.oxygenxml.com/doc/ug-editor/topics/sharing-projects.html">project
-        level</a>. When the project is open in the Project view, the following options are
-        imposed:</p><ul>
-        <li>The <b>Editor / Spell Check</b> preferences page is saved at project level with
-            automatic spell checking enabled.</li>
-        <li>The <b>Editor / Spell Check / Dictionaries</b> preferences page is saved at project
-            level and all <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/learned-words.html">learned
-            words</a> are saved in the <i>custom-settings/learned-words/en.tdi</i> file.</li>
-        <li>The <b>Editor / Edit Modes / Author</b> preferences page is saved at project level.</li>
-        <li>The <b>DITA / Maps</b> preferences page is saved at project level.</li>
-        <li>The <b>Document Type Association</b> preferences page disables certain framework
-            configurations like <b>DocBook 5</b> which are not useful.</li>
-        <li>The <b>Document Type Association / Locations</b> preferences page references two custom
-            framework configurations which are described further.</li>
+                <b>Preferences</b> folder can be saved at <a
+                href="https://www.oxygenxml.com/doc/ug-editor/topics/sharing-projects.html">project
+                level</a>. When the project is open in the Project view, the following options are
+            imposed:</p><ul>
+            <li>The <b>Editor / Spell Check</b> preferences page is saved at project level with
+                automatic spell checking enabled.</li>
+            <li>The <b>Editor / Spell Check / Dictionaries</b> preferences page is saved at project
+                level and all <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/learned-words.html">learned
+                    words</a> are saved in the <i>custom-settings/learned-words/en.tdi</i>
+                file.</li>
+            <li>The <b>Editor / Edit Modes / Author</b> preferences page is saved at project level
+                to enable referenced content to be edited.</li>
+            <li>The <b>DITA / Maps</b> preferences page is saved at project level to specify to
+                always open maps in the maps manager and to enable referenced submaps to be
+                edited.</li>
+            <li>The <b>Document Type Association</b> preferences page disables certain framework
+                configurations that we do not need for a DITA project, like <b>DocBook 5</b> for
+                example.</li>
+            <li>The <b>Document Type Association / Locations</b> preferences page references the
+                frameworks folder that contains the two custom framework configurations which are
+                described further.</li>
         </ul><h2>Framework Customizations</h2><p>DITA Maps and Topics editing can be customized by
-        extending the current DITA frameworks. </p><p>The framework extension for editing DITA
-        Topics is defined in the <i>custom-settings/frameworks/dita-extension/dita-extension.exf</i>
-        <a
-        href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script-usecases.html"
-        >framework script file</a>. You can add your own custom actions to the toolbars, menus, or
-        contextual menus, and add, change, or remove transformation scenarios or validation
-        scenarios.</p><ul>
-        <li>
-            <p>You can customize the existing <a
-                href="https://www.oxygenxml.com/doc/ug-editor/topics/customizing-templates.html"
-                >DITA Topic file templates</a> by making changes to the
-                <i>custom-settings/frameworks/dita-extension/templates/</i> folder.</p>
-        </li>
-        <li>
-            <p>The content completion configuration extension file
-                <i>custom-settings/frameworks/dita-extension/resources/cc_config_ext.xml</i> allows
-                you to <a
-                href="https://www.oxygenxml.com/doc/ug-editor/topics/rendering-elements-cc-author.html"
-                >customize various aspects</a> of content completion. </p>
-        </li>
-        <li>
-            <p>You can add <a href="https://blog.oxygenxml.com/topics/SchematronBCs.html">custom
-                Schematron validation rules</a> in the
-                <i>custom-settings/frameworks/dita-extension/resources/customRules.sch</i>
-                Schematron file.</p>
-        </li>
-        <li>
-            <p>You can also <a href="https://blog.oxygenxml.com/topics/customizeDITACSS.html"
-                >customize the visual editing</a> by modifying the CSS
-                <i>custom-settings/frameworks/dita-extension/css/custom.css</i>.</p>
-        </li>
+            extending the current DITA frameworks. </p><p>The framework extension for editing DITA
+            Topics is defined in the
+                <i>custom-settings/frameworks/dita-extension/dita-extension.exf</i>
+            <a
+                href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script-usecases.html"
+                >framework script file</a>. You can add your own custom actions to the toolbars,
+            menus, or contextual menus, and add, change, or remove transformation scenarios or
+            validation scenarios.</p><ul>
+            <li>
+                <p>You can customize the existing <a
+                        href="https://www.oxygenxml.com/doc/ug-editor/topics/customizing-templates.html"
+                        >DITA Topic file templates</a> by making changes to the
+                        <i>custom-settings/frameworks/dita-extension/templates/</i> folder.</p>
+            </li>
+            <li>
+                <p>The content completion configuration extension file
+                        <i>custom-settings/frameworks/dita-extension/resources/cc_config_ext.xml</i>
+                    allows you to <a
+                        href="https://www.oxygenxml.com/doc/ug-editor/topics/rendering-elements-cc-author.html"
+                        >customize various aspects</a> of content completion. </p>
+            </li>
+            <li>
+                <p>You can add <a href="https://blog.oxygenxml.com/topics/SchematronBCs.html">custom
+                        Schematron validation rules</a> in the
+                        <i>custom-settings/frameworks/dita-extension/resources/customRules.sch</i>
+                    Schematron file.</p>
+            </li>
+            <li>
+                <p>You can also <a href="https://blog.oxygenxml.com/topics/customizeDITACSS.html"
+                        >customize the visual editing</a> by modifying the CSS
+                        <i>custom-settings/frameworks/dita-extension/css/custom.css</i>.</p>
+            </li>
         </ul>The framework extension for editing DITA Maps is defined in the
-        <i>custom-settings/frameworks/dita-map-extension/dita-map-extension.exf</i> <a
-        href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script-usecases.html"
-        >framework script file</a> and can me customized in a similar way. You can customize the
+            <i>custom-settings/frameworks/dita-map-extension/dita-map-extension.exf</i>
+        <a
+            href="https://www.oxygenxml.com/doc/ug-editor/topics/framework-customization-script-usecases.html"
+            >framework script file</a> and can be customized in a similar way. You can customize the
         existing <a href="https://www.oxygenxml.com/doc/ug-editor/topics/customizing-templates.html"
-        >DITA Map file templates</a> by making changes to the
-        <i>custom-settings/frameworks/dita-map-extension/templates/</i> folder.<h3>Renaming/Moving
-        Topics and Other Resources</h3><p>The project has a folder named <i>Main Files</i> with a
-        reference to the main DITA Map. This enables the <a
-        href="https://www.oxygenxml.com/doc/ug-editor/topics/dita-main-files.html">Main Files</a>
-        support in the project, allowing you to rename or move files and have Oxygen automatically
-        update the references to those files.</p><h3>Terminology Checking</h3><p>For checking
-        terminology, you can use the Oxygen <a
-        href="https://www.oxygenxml.com/doc/ug-editor/topics/terminology-checker-addon.html?"
-        >Terminology Checker add-on</a>. You can add terminology rules to the
-        <i>oxygen-term-checker</i> folder. For example, the Oxygen user manual uses a set of Vale
-        rules to check for <a
-        href="https://github.com/oxygenxml/userguide/tree/master/DITA/oxygen-term-checker">common
-        terminology problems</a>.</p><h2>Publishing</h2><p>You can publish the content of the
-        <i>project.ditamap</i> in two ways:</p><ul>
-        <li>You can open the DITA-OT project file named <i>publish-project.xml</i> from the
-            <i>publishing</i> subfolder and two predefined publishing scenarios become available.
-            You can read more about DITA-OT project files here in the <a
-            href="https://www.oxygenxml.com/doc/ug-editor/topics/dita_open_toolkit_project.html"
-            >user's manual</a>.</li>
-        <li>You can also open the <i>project.ditamap</i> file in the DITA Maps Manager view, invoke
-            the "Configure Transformation Scenario(s)" dialog box and in the Project section, there
-            are two predefined transformation scenarios (one for WebHelp, the other for PDF) that
-            use the publishing template archived in the zip file. This <a
-            href="https://www.oxygenxml.com/events/2018/webinar_creating_custom_publishing_templates_for_webhelp_and_pdf_output.html"
-            >past webinar</a> shows more details about creating and customizing a publishing
-            template. </li>
+            >DITA Map file templates</a> by making changes to the
+            <i>custom-settings/frameworks/dita-map-extension/templates/</i>
+            folder.<h3>Renaming/Moving Topics and Other Resources</h3><p>The project has a folder
+            named <i>Main Files</i> with a reference to the main DITA Map. This enables the <a
+                href="https://www.oxygenxml.com/doc/ug-editor/topics/dita-main-files.html">Main
+                Files</a> support in the project, allowing you to rename or move files and have
+            Oxygen automatically update the references to those files.</p><h3>Terminology
+            Checking</h3><p>For checking terminology, you can use the Oxygen <a
+                href="https://www.oxygenxml.com/doc/ug-editor/topics/terminology-checker-addon.html?"
+                >Terminology Checker add-on</a>. You can add terminology rules to the
+                <i>oxygen-term-checker</i> folder. For example, the Oxygen user manual uses a set of
+            Vale rules to check for <a
+                href="https://github.com/oxygenxml/userguide/tree/master/DITA/oxygen-term-checker"
+                >common terminology problems</a>.</p><h2>Publishing</h2><p>You can publish the
+            content of the <i>project.ditamap</i> in two ways:</p><ul>
+            <li>You can open the DITA-OT project file named <i>publish-project.xml</i> from the
+                    <i>publishing</i> subfolder and two predefined publishing scenarios for DITA-OT
+                projects become available. You can read more about DITA-OT project files here in the
+                    <a
+                    href="https://www.oxygenxml.com/doc/ug-editor/topics/dita_open_toolkit_project.html"
+                    >user's manual</a>.</li>
+            <li>You can also open the <i>project.ditamap</i> file in the DITA Maps Manager view,
+                invoke the "Configure Transformation Scenario(s)" dialog box and in the Project
+                section, there are two predefined transformation scenarios (one for WebHelp, the
+                other for PDF) that use the <i>publishing/<i></i>publishing-template.zip</i> custom
+                publishing template. This <a
+                    href="https://www.oxygenxml.com/events/2018/webinar_creating_custom_publishing_templates_for_webhelp_and_pdf_output.html"
+                    >past webinar</a> shows more details about creating and customizing a publishing
+                template.</li>
         </ul></body>
 </html>
